--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "livewire/livewire": "^2.10",
+        "power-components/livewire-powergrid": "^3.0",
+        "yajra/laravel-datatables": "^9.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
